--- a/artistic-works.html
+++ b/artistic-works.html
@@ -28,7 +28,7 @@
       font-family:"Source Serif 4", serif;
       color: var(--text);
       -webkit-font-smoothing: antialiased;
-      background: url("smc2.mp4") center/cover no-repeat fixed;
+      background: bg-video("smc2.mp4") center/cover no-repeat fixed;
       background-color: var(--bg);
       
   
