--- a/artistic-works.html
+++ b/artistic-works.html
@@ -44,7 +44,7 @@
       z-index: -2;
       opacity: .60;
       filter: brightness(.1) contrast(.2);
-      pointer-events: none;
+      pointer-events: center;
     }
 
     header, main{ position: relative; z-index: 2; }
