--- a/artistic-works.html
+++ b/artistic-works.html
@@ -134,12 +134,12 @@
       backdrop-filter: blur(12px);
     }
 
-    .project-hero{ text-align:center; margin-bottom: 80px; }
+    .project-hero{ text-align:left; margin-bottom: 100px; }
     .project-title{
       font-family: "Bebas Kai", sans-serif;
-      font-size: 4rem;
+      font-size: 1rem;
       letter-spacing: .18em;
-      margin-bottom: 24px;
+      margin-bottom: 40px;
       line-height:1.1;
       color: var(--text);
     }
