--- a/artistic-works.html
+++ b/artistic-works.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres - Mandame un Color</title>
+  <title>Mariana Torres - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
@@ -11,14 +10,12 @@
 
   <style>
     :root{
-      --bg: #06070b;
-      --text: #f2f4f7;
+      --bg:#06070b;
+      --text:#f2f4f7;
       --muted: rgba(242,244,247,.70);
       --muted2: rgba(242,244,247,.55);
       --max: 1120px;
       --hdr-h: 64px;
-      --line: rgba(255,255,255,.22);
-      --overlay: rgba(6,7,11,.24);
     }
 
     *{ box-sizing:border-box; }
@@ -28,38 +25,23 @@
       font-family:"Source Serif 4", serif;
       color: var(--text);
       background-color: var(--bg);
-      position: relative;
-      overflow-x: hidden;
+      background: url("smc2.mp4") center/cover no-repeat fixed;
     }
 
-    /* Vídeo de fundo subtis */
-    .bg-video{
-      position: fixed;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -2;
-      opacity: .12;
-      filter: brightness(.7) contrast(.95);
-      pointer-events: none;
-    }
-
-    /* overlay do index */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       background:
         radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
-        linear-gradient(to bottom, var(--overlay), var(--overlay));
-      pointer-events: none;
-      z-index: -1;
+        linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
+      pointer-events:none;
+      z-index:0;
     }
 
-    header, main{ position: relative; z-index: 3; }
+    header, main{ position: relative; z-index: 1; }
 
-    /* ===== Header ===== */
+    /* ===== header minimal ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
@@ -69,93 +51,121 @@
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
     nav{
       max-width: var(--max);
       margin:0 auto;
       height:100%;
-      padding:0 40px;
+      padding:0 22px;
       display:flex;
       align-items:center;
       justify-content: space-between;
-      gap:24px;
+      gap: 16px;
     }
 
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing:.18em;
       white-space: nowrap;
-      color: var(--muted);
-      text-decoration: none;
+      color: var(--muted);        /* 👈 fixa a cor */
+      text-decoration: none;     /* 👈 remove sublinhado */
       opacity: .9;
-      transition: color .3s ease, opacity .3s ease;
     }
-    .brand:hover{ color: var(--text); opacity:1; }
 
     .menu{
       list-style:none;
       display:flex;
-      gap: 24px;
+      gap: 14px;
       margin:0;
       padding:0;
       font-size:.94rem;
       color: var(--muted);
     }
-    .menu a{ text-decoration:none; color: inherit; opacity:.9; white-space: nowrap; transition: opacity .3s ease; }
+
+    .menu a{
+      text-decoration:none;
+      color: var(--muted);
+      color: inherit;
+      opacity:.9;
+      white-space: nowrap;
+    }
+
     .menu a:hover{ opacity:1; color: var(--text); }
 
-    .dropdown{ position: relative; }
-    .dropdown > a::after{ content:" ▾"; font-size:0.7em; }
-    .dropdown-content{
+    main{ padding-top: var(--hdr-h); }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
+    }
+
+    .dropdown-content {
       display: none;
       position: absolute;
       top: 26px;
-      left:0;
+      left: 0;
       min-width: 220px;
-      background: rgba(5,6,8,.97);
-      border: 1px solid rgba(255,255,255,.1);
-      padding:10px 0;
-      list-style:none;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
       z-index: 999;
     }
-    .dropdown-content li{ padding:4px 14px; white-space:nowrap; }
-    .dropdown-content li a{ display:block; color: var(--muted2); }
-    .dropdown-content li a:hover{ color: var(--text); background: rgba(255,255,255,.06); }
-    .dropdown:hover .dropdown-content{ display:block; }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+     /* ===== about section ===== */
+
 
     /* ===== Main project section ===== */
     main.project-main{
-      max-width: var(--max);
-      margin: 0 auto;
-      padding: 120px 40px; /* mais respiração */
-      color: var(--text);
-      background: rgba(6,7,11,.48); /* transparência como no index */
-      border-radius: 12px;
-      backdrop-filter: blur(12px);
+    background:#0a0c11;
+     padding:100px 22px 140px;
     }
 
     .project-hero{ text-align:left; margin-bottom: 100px; }
     .project-title{
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1rem;
-      letter-spacing: .18em;
-      margin-bottom: 40px;
-      line-height:1.1;
-      color: var(--text);
+      flex:1;
+      max-width:620px;
+     order: 2;
+     align-items: flex-start
     }
     .project-meta{
       font-size:1.2rem;
       color: var(--muted2);
-      margin-top: 16px;
+      margin-top: 40px;
       line-height:1.4;
     }
 
     .project-overview{ margin-bottom:60px; }
     .project-description{
-      font-size:1.2rem;
-      line-height:1.75;
-      color: var(--muted);
-      margin-bottom:48px;
+      font-family:"Bebas Kai", system-ui, sans-serif;
+        letter-spacing:.18em;
+        font-size:2.2rem;
+       margin:0 0 32px;
+       color:var(--muted);
+       text-transform:uppercase;
+       margin-top: 0;
     }
     .project-credits{
       list-style:none;
