--- a/artistic-works.html
+++ b/artistic-works.html
@@ -35,7 +35,7 @@
   object-fit: cover;
   z-index: -2;
   opacity: .12; /* controla a intensidade do vídeo */
-  pointer-events: none;
+  pointer-events: center;
 }
     header, main{ position: relative; z-index: 1; }
 
