--- a/artistic-works.html
+++ b/artistic-works.html
@@ -25,9 +25,9 @@
       font-family:"Source Serif 4", serif;
       color: var(--text);
       background-color: var(--bg);
+      
     }
-
-  .bg-video{
+    .bg-video{
   position: fixed;
   inset: 0;
   width: 100%;
@@ -37,6 +37,18 @@
   opacity: .12; /* controla a intensidade do vídeo */
   pointer-events: center;
 }
+
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
+        linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
+      pointer-events:none;
+      z-index:0;
+    }
+
     header, main{ position: relative; z-index: 1; }
 
     /* ===== header minimal ===== */
@@ -132,27 +144,35 @@
       display: block;
     }
 
-     /* ===== about section ===== */
-
-
     /* ===== Main project section ===== */
     main.project-main{
     background:#0a0c11;
      padding:100px 22px 140px;
     }
 
-    .project-hero{ text-align:left; margin-bottom: 100px; }
+    .project-hero{ display: flex;
+      flex-direction: row;
+      max-width: 920px;   /* mesmo max-width do hero */
+      margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
+       align-items: center;
+       gap: 120px; }
     .project-title{
-      flex:1;
-      max-width:620px;
-     order: 2;
-     align-items: flex-start
+      font-family:"Bebas Kai", system-ui, sans-serif;
+       letter-spacing:.18em;
+       font-size:2.2rem;
+       margin:0 0 32px;
+     color:var(--muted);
+      text-transform:uppercase;
+      margin-top: 0;
     }
     .project-meta{
-      font-size:1.2rem;
-      color: var(--muted2);
-      margin-top: 40px;
-      line-height:1.4;
+      font-family:"Bebas Kai", system-ui, sans-serif;
+       letter-spacing:.18em;
+       font-size:2.2rem;
+       margin:0 0 32px;
+       color:var(--muted);
+       text-transform:uppercase;
+       margin-top: 0;
     }
 
     .project-overview{ margin-bottom:60px; }
