--- a/artistic-works.html
+++ b/artistic-works.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres - About</title>
+  <title>Mariana Torres - Send me a Color</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
