--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@ main{ padding-top: var(--hdr-h); }
 
 /* Association Memberships */
 .about-associations{
-  margin-top:96px;
+  margin-top:90px;
   text-align:center;
 }
 
@@ -225,23 +225,23 @@ main{ padding-top: var(--hdr-h); }
   letter-spacing: .22em;
   text-transform: uppercase;
   color: var(--muted2);
-  margin-bottom:40px;
+  margin-bottom:20px;
 }
 
 .associations-list{
   list-style:none;
   padding:0;
   margin:0 auto;
-  max-width:560px;
+  max-width:220px;
   display:flex;
   flex-direction: column;
-  gap:22px;
+  gap:15px;
 }
 
 .associations-list li{
-  display:flex;
+  display:flex-start;
   flex-direction: column;
-  gap:6px;
+  gap:4px;
 }
 
 .assoc-name{
@@ -272,7 +272,7 @@ main{ padding-top: var(--hdr-h); }
   font-size:2rem;
   color:var(--muted);
   text-transform:uppercase;
-  margin-bottom:48px;
+  margin-bottom:20px;
 }
 
 .grants-list{
