--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@ main{ padding-top: var(--hdr-h); }
 
 /* Association Memberships */
 .about-associations{
-  margin-top:90px;
+  margin-top:96px;
   text-align:center;
 }
 
@@ -225,23 +225,23 @@ main{ padding-top: var(--hdr-h); }
   letter-spacing: .22em;
   text-transform: uppercase;
   color: var(--muted2);
-  margin-bottom:20px;
+  margin-bottom:40px;
 }
 
 .associations-list{
   list-style:none;
   padding:0;
   margin:0 auto;
-  max-width:220px;
+  max-width:560px;
   display:flex;
   flex-direction: column;
-  gap:15px;
+  gap:22px;
 }
 
 .associations-list li{
-  display:flex-start;
+  display:flex;
   flex-direction: column;
-  gap:4px;
+  gap:6px;
 }
 
 .assoc-name{
@@ -272,7 +272,7 @@ main{ padding-top: var(--hdr-h); }
   font-size:2rem;
   color:var(--muted);
   text-transform:uppercase;
-  margin-bottom:20px;
+  margin-bottom:48px;
 }
 
 .grants-list{
@@ -422,3 +422,4 @@ main{ padding-top: var(--hdr-h); }
 </main>
 </body>
 </html>
+
